--- a/frontend/tips/69-safari/main.mdx
+++ b/frontend/tips/69-safari/main.mdx
@@ -25,8 +25,33 @@ category:
 
 Since Selenium 2.45.0, in order to use SafariDriver, you need to manually install the SafariDriver browser extension.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<!-- Add the name of the folder -->
+Running your Selenium tests on a different browser tends to require additional setup, and [SafariDriver](https://github.com/SeleniumHQ/selenium/wiki/SafariDriver) is no
+exception.
 
-<DropdownMarkdown folderName='69-safari' />
+The following example will go through how to do it and make sure it's working.
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Java', value: 'java' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"69-safari"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
