--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -21,10 +21,33 @@ category:
 
 ## Intro
 
-Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.
+Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or
+tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.
 
-Previously, you may have sent keystrokes to open a new tab or window with a send keys method and `Command t` (MacOS) or `Control n` (Windows). However, this doesn’t translate well across different operating systems and browser versions.
+Previously, you may have sent keystrokes to open a new tab or window with a send keys method and `Command t`
+(MacOS) or `Control n` (Windows). However, this doesn’t translate well across different operating systems and browser
+versions.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='73-open-new-window' />
+With the release of Selenium 4 comes the `newWindow` command which allows you to create a new window or new tab (without needing a keyboard input), then select that tab, and navigate to a website:
+
+| **Language** | **New Window**                                                                                                                                                                                                  | **New Tab**                                                                                                                                                                                                  |
+| ------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Java**     | [`driver.switchTo().newWindow(WindowType.WINDOW);`](https://github.com/saucelabs-training/demo-java/blob/docs-1.2/selenium-examples/src/test/java/com/saucedemo/selenium/se4newfeatures/NewWindowTest.java#L13) | [`driver.switchTo().newWindow(WindowType.TAB);`](https://github.com/saucelabs-training/demo-java/blob/docs-1.2/selenium-examples/src/test/java/com/saucedemo/selenium/se4newfeatures/NewWindowTest.java#L21) |
+| **Python**   | [`driver.switch_to.new_window('window')`](https://github.com/saucelabs-training/demo-python/blob/docs-1.1/examples/selenium/new_features/test_new_window.py#L5)                                                 | [`driver.switch_to.new_window('tab')`](https://github.com/saucelabs-training/demo-python/blob/docs-1.1/examples/selenium/new_features/test_new_window.py#L12)                                                |
+| **Ruby**     | [`@driver.switch_to.new_window(:window)`](https://github.com/saucelabs-training/demo-ruby/blob/docs-1.1/training-sessions/selenium4/spec/new_window_spec.rb#L7)                                                 | [`@driver.switch_to.new_window(:tab)`](https://github.com/saucelabs-training/demo-ruby/blob/docs-1.1/training-sessions/selenium4/spec/new_window_spec.rb#L13)                                                |
+| **C#**       | [`Driver.SwitchTo().NewWindow(WindowType.Window);`](https://github.com/saucelabs-training/demo-csharp/blob/docs-1.1/DotnetCore/Sauce.Demo/Core.Selenium.Examples/Selenium4/NewFeatures/NewWindow.cs#L39)        | [`Driver.SwitchTo().NewWindow(WindowType.Tab);`](https://github.com/saucelabs-training/demo-csharp/blob/docs-1.1/DotnetCore/Sauce.Demo/Core.Selenium.Examples/Selenium4/NewFeatures/NewWindow.cs#L48)        |
+
+##### _Click on any of the code snippets in the table for more information and script demos._
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Java', value: 'java' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"63-right-click"} languages={contentLanguages} />
+
+
