--- a/frontend/tips/template/main.mdx
+++ b/frontend/tips/template/main.mdx
@@ -23,8 +23,16 @@ category: 'template'
 
 <!-- Write 1-3 paragraphs introducing a problem or use case, and what your tip will be teaching the reader -->
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
 
-<!-- Add the name of the folder -->
+<!-- Add the name of the folder and only include the included languages/content -->
 
-<DropdownMarkdown folderName='template' />
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"template"} languages={contentLanguages} />
