--- a/frontend/tips/14-interactive-prompts-revisited/main.mdx
+++ b/frontend/tips/14-interactive-prompts-revisited/main.mdx
@@ -39,8 +39,7 @@ Sometimes you just need to be able to _pry_ into the code, jump in, open it up a
 solve the error you are experiencing.
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"14-interactive-prompts-revisited"} languages={contentLanguages} />
+<DisplayTips contentPath={"14-interactive-prompts-revisited"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
