--- a/frontend/tips/15-download-secure-files/main.mdx
+++ b/frontend/tips/15-download-secure-files/main.mdx
@@ -36,11 +36,10 @@ Selenium's cookie store and pass it into the HTTP library when we perform the re
 Let's continue with some examples.
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"15-download-secure-files"} languages={contentLanguages} />
+<DisplayTips contentPath={"15-download-secure-files"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
