--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -29,11 +29,10 @@ A great way to handle this is by checking the HTTP Status Code that the browser 
 is not available in Selenium WebDriver.
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={contentLanguages} />
+<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
