--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -39,11 +39,10 @@ hard-coding these values directly in your test code.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"19-data-driven-testing"} languages={contentLanguages} />
+<DisplayTips contentPath={"19-data-driven-testing"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
