--- a/frontend/tips/26-cloud/main.mdx
+++ b/frontend/tips/26-cloud/main.mdx
@@ -53,10 +53,9 @@ Here is an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"26-cloud"} languages={contentLanguages} />
+<DisplayTips contentPath={"26-cloud"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
