--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -37,11 +37,10 @@ well worth the effort.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"27-parallel"} languages={contentLanguages} />
+<DisplayTips contentPath={"27-parallel"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
