--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -46,14 +46,13 @@ Let's step through an example using ChromeDriver ([download here](https://chrome
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"29-chrome-driver"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"29-chrome-driver"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
