--- a/frontend/tips/33-css-vs-xpath-2/main.mdx
+++ b/frontend/tips/33-css-vs-xpath-2/main.mdx
@@ -45,8 +45,7 @@ focus on a specific Selenium action rather than the entire test run, and run thi
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"33-css-vs-xpath-2"} languages={contentLanguages} />
+<DisplayTips contentPath={"33-css-vs-xpath-2"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
