--- a/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
+++ b/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
@@ -38,11 +38,10 @@ and parallelize it with the help of [threads](http://www.tutorialspoint.com/ruby
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"42-one-test-multiple-browsers-parallel"} languages={contentLanguages} />
+<DisplayTips contentPath={"42-one-test-multiple-browsers-parallel"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
