--- a/frontend/tips/43-forgot-password/main.mdx
+++ b/frontend/tips/43-forgot-password/main.mdx
@@ -35,11 +35,10 @@ on [the-internet](https://github.com/saucelabs/the-internet).
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"43-forgot-password"} languages={contentLanguages} />
+<DisplayTips contentPath={"43-forgot-password"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
