--- a/frontend/tips/48-load-testing/main.mdx
+++ b/frontend/tips/48-load-testing/main.mdx
@@ -40,11 +40,10 @@ Let's continue with an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"48-load-testing"} languages={contentLanguages} />
+<DisplayTips contentPath={"48-load-testing"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
