--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -32,11 +32,10 @@ agnostic way that also gets us the information in real time.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"54-logging"} languages={contentLanguages} />
+<DisplayTips contentPath={"54-logging"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
