--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -28,11 +28,10 @@ for **every** test action?
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"55-wrapper"} languages={contentLanguages} />
+<DisplayTips contentPath={"55-wrapper"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
