--- a/frontend/tips/69-safari/main.mdx
+++ b/frontend/tips/69-safari/main.mdx
@@ -35,12 +35,11 @@ The following example will go through how to do it and make sure it's working.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"69-safari"} languages={[
     { label: 'Java', value: 'java' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"69-safari"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
