--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -43,11 +43,10 @@ With the release of Selenium 4 comes the `newWindow` command which allows you to
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"63-right-click"} languages={[
     { label: 'Java', value: 'java' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"63-right-click"} languages={contentLanguages} />
+]} />
 
 
