--- a/frontend/tips/9-use-a-base-page-object/main.mdx
+++ b/frontend/tips/9-use-a-base-page-object/main.mdx
@@ -38,11 +38,10 @@ leverage them in any Page Object we see fit.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"9-use-a-base-page-object"} languages={contentLanguages} />
+<DisplayTips contentPath={"9-use-a-base-page-object"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
