--- a/frontend/tips/1-how-to-upload-a-file/main.mdx
+++ b/frontend/tips/1-how-to-upload-a-file/main.mdx
@@ -40,15 +40,14 @@ Let's step through an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
