--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -44,11 +44,10 @@ putting them into test code.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={contentLanguages} />
+<DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
