--- a/frontend/tips/13-how-to-access-basic-auth/main.mdx
+++ b/frontend/tips/13-how-to-access-basic-auth/main.mdx
@@ -40,15 +40,14 @@ level dialog box and avoid setting up a proxy server. This approach will work fo
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
