--- a/frontend/tips/16-take-screenshot-on-failure/main.mdx
+++ b/frontend/tips/16-take-screenshot-on-failure/main.mdx
@@ -36,15 +36,14 @@ Here is an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"16-take-screenshot-on-failure"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"16-take-screenshot-on-failure"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
