--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -37,15 +37,14 @@ Let's continue with an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"2-download-a-file"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"2-download-a-file"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
