--- a/frontend/tips/22-locator-strategy/main.mdx
+++ b/frontend/tips/22-locator-strategy/main.mdx
@@ -41,11 +41,10 @@ cross-browser performant, simpler to maintain, and powerful -- that's CSS Select
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"22-locator-strategy"} languages={contentLanguages} />
+<DisplayTips contentPath={"22-locator-strategy"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
