--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -33,15 +33,14 @@ Selenium to switch to that frame first. Then the rest of your test should be mor
 Let's explore further with some examples.
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"3-work-with-frames"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"3-work-with-frames"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
