--- a/frontend/tips/30-mobile/main.mdx
+++ b/frontend/tips/30-mobile/main.mdx
@@ -50,11 +50,10 @@ __NOTE: These examples were borrowed from
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"30-mobile"} languages={contentLanguages} />
+<DisplayTips contentPath={"30-mobile"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
