--- a/frontend/tips/32-css-vs-xpath/main.mdx
+++ b/frontend/tips/32-css-vs-xpath/main.mdx
@@ -46,11 +46,10 @@ XPath stack up and fall down. Then we will be able to determine a more helpful l
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"32-css-vs-xpath"} languages={contentLanguages} />
+<DisplayTips contentPath={"32-css-vs-xpath"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
