--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -37,11 +37,10 @@ Let's dig in with an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"49-performance-testing"} languages={contentLanguages} />
+<DisplayTips contentPath={"49-performance-testing"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
