--- a/frontend/tips/53-growl/main.mdx
+++ b/frontend/tips/53-growl/main.mdx
@@ -40,15 +40,14 @@ Let's step through an example of how to set this up.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"53-growl"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"53-growl"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
