--- a/frontend/tips/58-tagging/main.mdx
+++ b/frontend/tips/58-tagging/main.mdx
@@ -45,11 +45,10 @@ Let's start with an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"58-tagging"} languages={contentLanguages} />
+<DisplayTips contentPath={"58-tagging"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
