--- a/frontend/tips/60-list-tags/main.mdx
+++ b/frontend/tips/60-list-tags/main.mdx
@@ -36,11 +36,10 @@ Here is an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"60-list-tags"} languages={contentLanguages} />
+<DisplayTips contentPath={"60-list-tags"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
