--- a/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
+++ b/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
@@ -47,15 +47,14 @@ Let's try out a couple of examples.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+
+<DisplayTips contentPath={"61-how-to-press-keyboard-keys"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"61-how-to-press-keyboard-keys"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
