--- a/frontend/tips/64-limit-bandwidth/main.mdx
+++ b/frontend/tips/64-limit-bandwidth/main.mdx
@@ -49,11 +49,10 @@ Let's continue with an example.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"64-limit-bandwidth"} languages={contentLanguages} />
+<DisplayTips contentPath={"64-limit-bandwidth"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
