--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -43,11 +43,10 @@ Lets look at an example of each.
 
 
 import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
 
-<DisplayTips contentPath={"67-broken-images"} languages={contentLanguages} />
+<DisplayTips contentPath={"67-broken-images"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
