Loading script properly

--- a/frontend/tips/1-how-to-upload-a-file/main.mdx
+++ b/frontend/tips/1-how-to-upload-a-file/main.mdx
@@ -39,7 +39,7 @@ insert the full path of the file we want to upload (as text) into the form and t
 Let's step through an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"1-how-to-upload-a-file"} languages={[
     { label: 'Python', value: 'python' },
