--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -43,7 +43,7 @@ This will enable us to continue through specific Selenium actions and locators t
 putting them into test code.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={[
     { label: 'Ruby', value: 'ruby' },
