--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -51,7 +51,7 @@ Let's start with an example for each approach with a popular A/B testing platfor
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={[
     { label: 'Python', value: 'python' },
