--- a/frontend/tips/15-download-secure-files/main.mdx
+++ b/frontend/tips/15-download-secure-files/main.mdx
@@ -35,7 +35,7 @@ Selenium's cookie store and pass it into the HTTP library when we perform the re
 
 Let's continue with some examples.
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"15-download-secure-files"} languages={[
     { label: 'Ruby', value: 'ruby' },
