--- a/frontend/tips/16-take-screenshot-on-failure/main.mdx
+++ b/frontend/tips/16-take-screenshot-on-failure/main.mdx
@@ -35,7 +35,7 @@ something that is fairly quick to add to your tests, and allows you to review th
 Here is an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"16-take-screenshot-on-failure"} languages={[
     { label: 'Python', value: 'python' },
