--- a/frontend/tips/25-how-to-work-with-tables/main.mdx
+++ b/frontend/tips/25-how-to-work-with-tables/main.mdx
@@ -67,7 +67,7 @@ Let's step through some examples for a common set of table functionality like so
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"25-how-to-work-with-tables"} languages={[
     { label: 'Python', value: 'python' },
