--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -36,7 +36,7 @@ But keep in mind that doing this requires some consideration into how you struct
 well worth the effort.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"27-parallel"} languages={[
     { label: 'Ruby', value: 'ruby' },
