--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -32,7 +32,7 @@ Selenium to switch to that frame first. Then the rest of your test should be mor
 
 Let's explore further with some examples.
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"3-work-with-frames"} languages={[
     { label: 'Python', value: 'python' },
