--- a/frontend/tips/34-css-vs-xpath-3/main.mdx
+++ b/frontend/tips/34-css-vs-xpath-3/main.mdx
@@ -45,7 +45,7 @@ Let's dig into the results.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"34-css-vs-xpath-3"} languages={[
     { label: 'Ruby', value: 'ruby' },
