--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -33,7 +33,7 @@ that you may find in some browsers and not others.
 Let's step through a couple of examples to demonstrate.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"4-work-with-multiple-windows"} languages={[
     { label: 'Python', value: 'python' },
