--- a/frontend/tips/40-disabled-element/main.mdx
+++ b/frontend/tips/40-disabled-element/main.mdx
@@ -34,7 +34,7 @@ method called `Enabled` that can help us accomplish what we want.
 Let's take a look at how to use it.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"40-disabled-element"} languages={[
     { label: 'Python', value: 'python' },
