--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -28,7 +28,7 @@ text you want -- there's a bit more skill to it.
 
 Let's take a look at a couple of different approaches.
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"5-select-from-a-dropdown"} languages={[
     { label: 'Python', value: 'python' },
