--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -38,7 +38,7 @@ Built into Selenium is the ability to switch to an alert window and either accep
 tests can continue unencumbered by dialog boxes that may feel just out of reach.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={[
     { label: 'Python', value: 'python' },
