--- a/frontend/tips/52-grid/main.mdx
+++ b/frontend/tips/52-grid/main.mdx
@@ -45,7 +45,7 @@ to not only distribute test load, but also give you a diversity of browsers to w
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"52-grid"} languages={[
     { label: 'Python', value: 'python' },
