--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -31,7 +31,7 @@ By accessing what we want through the [WebDriver Wire Protocol](https://code.goo
 agnostic way that also gets us the information in real time.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"54-logging"} languages={[
     { label: 'Ruby', value: 'ruby' },
