--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -27,7 +27,7 @@ you have to explicitly request the logs after each test action (fine for one-off
 for **every** test action?
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"55-wrapper"} languages={[
     { label: 'Ruby', value: 'ruby' },
