--- a/frontend/tips/56-retry-failed-tests/main.mdx
+++ b/frontend/tips/56-retry-failed-tests/main.mdx
@@ -34,7 +34,7 @@ just those a second time.
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"56-retry-failed-tests"} languages={[
     { label: 'Ruby', value: 'ruby' },
