--- a/frontend/tips/65-highlight-elements/main.mdx
+++ b/frontend/tips/65-highlight-elements/main.mdx
@@ -38,7 +38,7 @@ Let's take a look at an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"65-highlight-elements"} languages={[
     { label: 'Python', value: 'python' },
