--- a/frontend/tips/7-use-a-page-object/main.mdx
+++ b/frontend/tips/7-use-a-page-object/main.mdx
@@ -39,7 +39,7 @@ you only have to update your test code in one place to fix it.
 And with this approach, we not only get the benefit of controlled chaos, we also get the benefit of reusable behavior.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"7-use-a-page-object"} languages={[
     { label: 'Ruby', value: 'ruby' },
