--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -42,7 +42,7 @@ With the release of Selenium 4 comes the `newWindow` command which allows you to
 ##### _Click on any of the code snippets in the table for more information and script demos._
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"63-right-click"} languages={[
     { label: 'Java', value: 'java' },
