--- a/frontend/tips/template/main.mdx
+++ b/frontend/tips/template/main.mdx
@@ -26,7 +26,7 @@ category: 'template'
 
 <!-- Add the name of the folder and only include the included languages/content -->
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"template"} languages={[
     { label: 'Python', value: 'python' },
