--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -36,7 +36,7 @@ After the file is downloaded we can then perform some simple checks to make sure
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"2-download-a-file"} languages={[
     { label: 'Python', value: 'python' },
