--- a/frontend/tips/23-dynamic-pages/main.mdx
+++ b/frontend/tips/23-dynamic-pages/main.mdx
@@ -44,7 +44,7 @@ onto the next step of the test), or it will throw a timeout exception (causing y
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"23-dynamic-pages"} languages={[
     { label: 'Ruby', value: 'ruby' },
