--- a/frontend/tips/39-drag-and-drop/main.mdx
+++ b/frontend/tips/39-drag-and-drop/main.mdx
@@ -32,7 +32,7 @@ As a workaround, we can simulate dragging and dropping by executing JavaScript w
 example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"39-drag-and-drop"} languages={[
     { label: 'Ruby', value: 'ruby' },
