--- a/frontend/tips/41-one-test-multiple-browsers/main.mdx
+++ b/frontend/tips/41-one-test-multiple-browsers/main.mdx
@@ -34,7 +34,7 @@ against each of them.
 Let's take a look at an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"41-one-test-multiple-browsers"} languages={[
     { label: 'Ruby', value: 'ruby' },
