--- a/frontend/tips/43-forgot-password/main.mdx
+++ b/frontend/tips/43-forgot-password/main.mdx
@@ -34,7 +34,7 @@ Let's dig in with an example that uses [the forgot password example](http://the-
 on [the-internet](https://github.com/saucelabs/the-internet).
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"43-forgot-password"} languages={[
     { label: 'Ruby', value: 'ruby' },
