--- a/frontend/tips/44-exception-handling/main.mdx
+++ b/frontend/tips/44-exception-handling/main.mdx
@@ -36,7 +36,7 @@ By adding some simple exception handling we can catch Selenium's errors and make
 Let's take a look at an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"44-exception-handling"} languages={[
     { label: 'Ruby', value: 'ruby' },
