--- a/frontend/tips/45-how-to-test-checkboxes/main.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/main.mdx
@@ -36,7 +36,7 @@ an attribute lookup), or by asking an element if it has been _selected_.
 We're going to go through each of these approaches to see their pros and cons.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"45-how-to-test-checkboxes"} languages={[
     { label: 'Python', value: 'python' },
