--- a/frontend/tips/47-waiting/main.mdx
+++ b/frontend/tips/47-waiting/main.mdx
@@ -42,7 +42,7 @@ Let's continue with some examples.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"47-waiting"} languages={[
     { label: 'Ruby', value: 'ruby' },
