--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -36,7 +36,7 @@ Let's dig in with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"49-performance-testing"} languages={[
     { label: 'Ruby', value: 'ruby' },
