--- a/frontend/tips/53-growl/main.mdx
+++ b/frontend/tips/53-growl/main.mdx
@@ -39,7 +39,7 @@ Let's step through an example of how to set this up.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"53-growl"} languages={[
     { label: 'Python', value: 'python' },
