--- a/frontend/tips/57-junit-xml/main.mdx
+++ b/frontend/tips/57-junit-xml/main.mdx
@@ -42,7 +42,7 @@ Let's go through an example of how to configure a test suite in order to output 
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"57-junit-xml"} languages={[
     { label: 'Ruby', value: 'ruby' },
