--- a/frontend/tips/58-tagging/main.mdx
+++ b/frontend/tips/58-tagging/main.mdx
@@ -44,7 +44,7 @@ Let's start with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"58-tagging"} languages={[
     { label: 'Ruby', value: 'ruby' },
