--- a/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
+++ b/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
@@ -46,7 +46,7 @@ You can see a full list of Selenium's available keyboard keys [here](http://sele
 Let's try out a couple of examples.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"61-how-to-press-keyboard-keys"} languages={[
     { label: 'Python', value: 'python' },
