--- a/frontend/tips/64-limit-bandwidth/main.mdx
+++ b/frontend/tips/64-limit-bandwidth/main.mdx
@@ -48,7 +48,7 @@ Let's continue with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"64-limit-bandwidth"} languages={[
     { label: 'Ruby', value: 'ruby' },
