--- a/frontend/tips/66-blacklist/main.mdx
+++ b/frontend/tips/66-blacklist/main.mdx
@@ -35,7 +35,7 @@ to a blacklist.
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"66-blacklist"} languages={[
     { label: 'Ruby', value: 'ruby' },
