--- a/frontend/tips/8-download-a-file-revisited/main.mdx
+++ b/frontend/tips/8-download-a-file-revisited/main.mdx
@@ -42,7 +42,7 @@ configuration, local disk usage, or lengthy download times (depending on the fil
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"8-download-a-file-revisited"} languages={[
     { label: 'Python', value: 'python' },
