--- a/frontend/tips/9-use-a-base-page-object/main.mdx
+++ b/frontend/tips/9-use-a-base-page-object/main.mdx
@@ -37,7 +37,7 @@ With a Base Page Object (a.k.a. a facade layer) we can abstract all common actio
 leverage them in any Page Object we see fit.
 
 
-import DisplayTips from "../../src/components/displayTips";
+import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"9-use-a-base-page-object"} languages={[
     { label: 'Ruby', value: 'ruby' },
